<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AuthenticationActivity">

    <View
        android:background="@drawable/bg_yellow_round_radius"
        android:layout_width="match_parent"
        android:layout_height="320dp"/>

    <ImageView
        android:id="@+id/imgFryingPan"
        android:src="@drawable/frying_pan"
        android:layout_centerHorizontal="true"
        android:layout_width="240dp"
        android:layout_height="200dp"
        android:contentDescription="@null"/>

    <LinearLayout
        android:layout_above="@+id/layoutUserOptionsText"
        android:layout_below="@+id/imgFryingPan"
        android:paddingHorizontal="16dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            app:strokeColor="@color/transparent"
            app:cardElevation="5dp"
            app:cardCornerRadius="8dp"
            android:layout_marginHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:padding="16dp"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtAuthenticationTitle"
                    android:text="@string/auth_activity_login_welcome_back_text"
                    android:textSize="20sp"
                    android:textColor="@color/olive_332900"
                    android:fontFamily="@font/poppins_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/txtAuthenticationDescription"
                    android:text="@string/auth_activity_login_login_welcome_text"
                    android:textColor="@color/light_grey_a5"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilOutlinedEmailTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/auth_activity_login_email_username_text"
                    app:hintTextColor="@color/light_grey_a5"
                    android:textColorHint="@color/light_grey_a5"
                    app:boxStrokeColor="@color/light_yellow_ffe275"
                    app:errorEnabled="true"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEditTextEmail"
                        android:textColor="@color/black_32"
                        android:maxLines="1"
                        android:lines="1"
                        android:textSize="14sp"
                        android:fontFamily="@font/poppins_medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilOutlinedPasswordTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/auth_activity_login_password_text"
                    app:hintTextColor="@color/light_grey_a5"
                    android:textColorHint="@color/light_grey_a5"
                    app:boxStrokeColor="@color/light_yellow_ffe275"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/light_yellow_ffe275"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEditTextPassword"
                        android:inputType="textPassword"
                        android:textColor="@color/black_32"
                        android:fontFamily="@font/poppins_medium"
                        android:maxLines="1"
                        android:lines="1"
                        android:textSize="14sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAuthenticationLoginSignUp"
            android:text="@string/auth_activity_login_text"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_bold"
            android:background="@drawable/bg_button_olive_radius"
            app:backgroundTint="@null"
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutUserOptionsText"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtAccountExistedQuestion"
            android:text="@string/auth_activity_do_not_have_account_text"
            android:textSize="12sp"
            android:textColor="@color/black_32"
            android:fontFamily="@font/poppins_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txtLoginSignUp"
            android:text="@string/auth_activity_signup_text"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginStart="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</RelativeLayout>